# nyc-taxi-predictions-2025

./: .gitignore  01-databricks_mlflow_model_experiments[1].ipynb  challenger-experiment.ipynb  initial_tracking.ipynb  main.py  mlflow.db  pyproject.toml  tracking_notebook.ipynb
app/: api.py
app/api/: api.py
app/ui/: main.py
data/: green_tripdata_2025-02.parquet
experiments/: 01-databricks_mlflow_model_experiments.ipynb
mlruns/1/models/m-1476d4f112514dd3a313f9fddc8842ae/artifacts/: MLmodel
mlruns/1/models/m-30bc838052294977a1dd6e3cf39f89ef/artifacts/: MLmodel
mlruns/1/models/m-5cff095cc8484836adfa37b480911732/artifacts/: MLmodel
mlruns/2/models/m-01c7452e1c7e403393a57fc447bc2a0a/artifacts/: MLmodel
mlruns/2/models/m-4bea23f29c2a477ba7edebf47b4821d8/artifacts/: MLmodel
mlruns/2/models/m-8db690d5d29e4ac0ba073af051672e2a/artifacts/: MLmodel
mlruns/2/models/m-a4431850e4154235a674892bd733fce5/artifacts/: MLmodel  model.pkl
mlruns/2/models/m-e3eb9fe20fb84934bfbaa8e4a0ff3ab6/artifacts/: MLmodel
mlruns/2/models/m-fe124f84524f423da4c1e3df14720567/artifacts/: MLmodel
notebooks/: mlflow.db  tracking_notebook.ipynb
notebooks/mlruns/2/0b6ed3212cd74d3c832e60788b843c01/artifacts/: estimator.html
notebooks/mlruns/2/32faa545dfba4d0abff5308643c21208/artifacts/: estimator.html
notebooks/mlruns/2/6b1e25a722224286b59f7999e6be9902/artifacts/: estimator.html
notebooks/mlruns/2/6d067e903ae849ca99e2014cdf9ec122/artifacts/: estimator.html
training_pipeline/: 02-training_pipeline_prefect.py  Actividad_Clase.ipynb  train_challenger.py
(+38 files in other folders)
